# trobalecte

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
donadas/etiquetas/: wikipedia_dialectes_aleatori.csv.dvc  wikipedia_dialectes_automatic.csv.dvc  wikipedia_dialectes_entropia.csv.dvc  wikipedia_dialectes_manual.csv.dvc
donadas/prediccions/: seleccion_paginas_entropia.txt.dvc  wikipedia_prediccions.csv.dvc
donadas/prediccions/xgboost/: seleccion_paginas_entropia.txt.dvc  wikipedia_prediccions.csv.dvc
mlruns/0/: meta.yaml
quaserns/: 01_extraire_texte_wikipedia.ipynb  02_tokenizar.ipynb  03_etiquetar_dialectes_automatic.ipynb  04_entrenar.ipynb  04a_entrenar_xgboost.ipynb  auxiliar.py  config.yml  mots_tipics.yml
src/trobalecte/: __main__.py
webapps/classificar/: classificar.js  index.html  style.css
webapps/etiquetatge/: auxiliar.js  config.json  estil.css  etiquetas.json  index.html  main.js  package.json  servidor.js  ui.js
webapps/etiquetatge/modules/: errors.mjs  helpers.mjs
